[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/git_for_godot/history_main_screen/settings_popup.gd" type="Script" id=1]

[node name="SettingsPopup" type="AcceptDialog"]
rect_min_size = Vector2( 320, 200 )
window_title = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayedCommits" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 24 )
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/DisplayedCommits"]
margin_top = 5.0
margin_right = 220.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Displayed commits (per branch)"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/DisplayedCommits"]
margin_left = 224.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "A value of 0 will disable the Git history being displayed"
max_value = 1000.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoHide" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 304.0
margin_bottom = 52.0
rect_min_size = Vector2( 300, 24 )
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/AutoHide"]
margin_top = 5.0
margin_right = 220.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Auto-hide panels on switching"

[node name="Panel" type="Panel" parent="VBoxContainer/AutoHide"]
margin_left = 224.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/AutoHide/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 0 )
pressed = true
text = "On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoShow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 304.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 24 )
alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/AutoShow"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/AutoShow"]
margin_left = 28.0
margin_top = 5.0
margin_right = 220.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Also auto-show panels"

[node name="Panel" type="Panel" parent="VBoxContainer/AutoShow"]
margin_left = 224.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/AutoShow/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 0 )
pressed = true
text = "On"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="." to="VBoxContainer" method="_on_SettingsPopup_confirmed"]
[connection signal="toggled" from="VBoxContainer/AutoHide/Panel/CheckBox" to="VBoxContainer" method="_on_AutoHide_toggled"]
[connection signal="toggled" from="VBoxContainer/AutoShow/Panel/CheckBox" to="VBoxContainer" method="_on_AutoShow_toggled"]
